--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 - name: new_forex_staging
 #  config_file: C:/Users/Panda102/Desktop/Test.yml
-  config_file: C:\Users\Administrator\Desktop\Brand.yml
+  config_file: C:/Users/Administrator/Desktop/Brand.yml
 
 #- name: mpcrypto
 #  config_file: mpcrypto.yml
