--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -15,10 +15,10 @@ tests_config:
   tests:
     - test_read_customer_details
 #
-- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customers_Details
-  class: ReadCustomersDetails
-  tests:
-    - test_read_customers_details
+#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customers_Details
+#  class: ReadCustomersDetails
+#  tests:
+#    - test_read_customers_details
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Update_Customer
 #  class: UpdateCustomer
