--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,11 +1,16 @@
 tests_config:
 
 ###CA
-- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-  class: SignUpTest
+#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+#  class: SignUpTest
+#  tests:
+#    - test_check_sign_up
+#    - test_registred_client_exist_in_crm
+- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Live_Accounts
+  class: AddNewLiveAccountTestCA
   tests:
-    - test_check_sign_up
-    - test_registred_client_exist_in_crm
+    - test_check_add_live_account_eur_currency
+#    - test_registred_client_exist_in_crm
 
 
 
