--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,20 +1,20 @@
 brands:
+#- name: goldenmarkets
+#  config_file: goldenmarkets.yml
+#- name: b-traderfx
+#  config_file: b-traderfx.yml
 #- name: mpcrypto
 #  config_file: mpcrypto.yml
-- name: goldenmarkets
-  config_file: goldenmarkets.yml
 #- name: safemarkets
 #  config_file: safemarkets.yml
-- name: b-traderfx
-  config_file: b-traderfx.yml
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
 #- name: jonesmutual
 #  config_file: jonesmutual.yml
 #- name: forexbestmarket
 #  config_file: forexbestmarket.yml
-#- name: newrichmarkets
-#  config_file: newrichmarkets.yml
+- name: newrichmarkets
+  config_file: newrichmarkets.yml
 #- name: solocapitlas
 #  config_file: solocapitlas.yml
 #- name: goldenmarkets
