--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,6 +1,6 @@
 brands:
-- name: gmo
-  config_file: gmo.yml
+#- name: gmo
+#  config_file: gmo.yml
 #- name: capitalmarketsbanc
 #  config_file: capitalmarketsbanc.yml
 #- name: itrader_global
@@ -13,8 +13,8 @@ brands:
 #  config_file: kbcapitals.yml
 #- name: fxpmarkets
 #  config_file: fxpmarkets.yml
-#- name: mlnfx
-#  config_file: mlnfx.yml
+- name: mlnfx
+  config_file: mlnfx.yml
 #- name: brokerxp
 #  config_file: brokerxp.yml
 #- name: oinvestsa
