OF_v4: ready to run

--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,6 +1,8 @@
 brands:
-- name: rimarkets
-  config_file: rimarkets.yml
-- name: gmo
-  config_file: gmo.yml
+- name: kayafx
+  config_file: kaya_fx.yml
+#- name: rimarkets
+#  config_file: rimarkets.yml
+#- name: gmo
+#  config_file: gmo.yml
 
