OF_v4: ready to run

--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,8 +1,8 @@
 brands:
 - name: q8
   config_file: q8.yml
-- name: aztrades
-  config_file: aztrades.yml
+#- name: aztrades
+#  config_file: aztrades.yml
 
 
 
