--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -48,3 +48,5 @@ CALoginPage:
   address: "//input[@name = 'address']"
   zip_code: "//input[@name = 'postCode']"
   next_btn: "//button[contains (text(), 'Next')]"
+CAPage:
+  create_account_btn: "//button[@class='forex-button-pandats'][contains(text(), 'Create Account')]"
