--- a/src/test/python/resources/config/brands6.yml
+++ b/src/test/python/resources/config/brands6.yml
@@ -1,6 +1,7 @@
 brands:
-
-- name: eafx
-  config_file: eafx.yml
+- name: aztrades
+  config_file: aztrades.yml
+#- name: eafx
+#  config_file: eafx.yml
 #- name: goldenmarkets
 #  config_file: goldenmarkets.yml
