OF_v5: ready to run

--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -11,7 +11,7 @@ tests_config:
   tests:
     - test_add_new_live_account_ca
     - test_add_new_demo_account_ca
-
+#    - test_check_demo_in_crm
 
 
   #General
