--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -11,10 +11,10 @@ brands:
 #  config_file: finmarket.yml
 #- name: kbcapitals
 #  config_file: kbcapitals.yml
-- name: fxpmarkets
-  config_file: fxpmarkets.yml
-#- name: mlnfx
-#  config_file: mlnfx.yml
+#- name: fxpmarkets
+#  config_file: fxpmarkets.yml
+- name: mlnfx
+  config_file: mlnfx.yml
 #- name: brokerxp
 #  config_file: brokerxp.yml
 #- name: oinvestsa
