OF_CA_v4: added update details test

--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -6,13 +6,17 @@ tests_config:
     - test_check_sign_up
 #    - test_registred_client_exist_in_crm
 
-- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Live_Accounts
-  class: AddNewLiveAccountTestCA
-  tests:
-    - test_add_new_live_account_ca
-    - test_add_new_demo_account_ca
+#- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Live_Accounts
+#  class: AddNewLiveAccountTestCA
+#  tests:
+#    - test_add_new_live_account_ca
+#    - test_add_new_demo_account_ca
 #    - test_check_demo_in_crm
 
+- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
+  class: PersonalDetailsUpdateTestCA
+  tests:
+    - test_update_personal_details
 
   #General
 #- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
