--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -9,7 +9,7 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Live_Accounts
   class: AddNewLiveAccountTestCA
   tests:
-#    - test_add_live_account_ca
+    - test_add_live_account_ca
     - test_add_demo_account_ca
 
 
