OF_CA_v4: added update details test

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -13,10 +13,10 @@ brands:
 #  config_file: kbcapitals.yml
 #- name: fxpmarkets
 #  config_file: fxpmarkets.yml
-- name: mlnfx
-  config_file: mlnfx.yml
-#- name: brokerxp
-#  config_file: brokerxp.yml
+#- name: mlnfx
+#  config_file: mlnfx.yml
+- name: brokerxp
+  config_file: brokerxp.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
 #- name: kaya_fx
