--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,8 +1,8 @@
 brands:
-- name: 2mercados
-  config_file: 2mercados.yml
-- name: royal_cfds
-  config_file: royal_cfds.yml
+#- name: 2mercados
+#  config_file: 2mercados.yml
+#- name: royal_cfds
+#  config_file: royal_cfds.yml
 #- name: 4xfx
 #  config_file: 4xfx.yml
 #- name: coinstec
@@ -21,8 +21,8 @@ brands:
 #  config_file: goldenmarkets.yml
 #- name: herdos
 #  config_file: herdos.yml
-#- name: solocapitlas
-#  config_file: solocapitlas.yml
+- name: solocapitlas
+  config_file: solocapitlas.yml
 #- name: tradospot
 #  config_file: tradospot.yml
 #- name: jonesmutual
