OF_CA_v4: added update details test

--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -4,14 +4,14 @@ tests_config:
   class: SignUpTest
   tests:
     - test_check_sign_up
-#    - test_registred_client_exist_in_crm
+    - test_registred_client_exist_in_crm
 
 - module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Live_Accounts
   class: AddNewLiveAccountTestCA
   tests:
     - test_add_new_live_account_ca
-#    - test_add_new_demo_account_ca
-#    - test_check_demo_in_crm
+    - test_add_new_demo_account_ca
+    - test_check_demo_in_crm
     - test_open_ticket_ca
 
 
