--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,14 +1,14 @@
 brands:
-- name: 2mercados
-  config_file: 2mercados.yml
+#- name: 2mercados
+#  config_file: 2mercados.yml
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
 #- name: 4xfx
 #  config_file: 4xfx.yml
 #- name: coinstec
 #  config_file: coinstec.yml
-#- name: mpcrypto
-#  config_file: mpcrypto.yml
+- name: mpcrypto
+  config_file: mpcrypto.yml
 #- name: b-finance
 #  config_file: b-finance.yml
 #- name: aztrades
