--- a/src/main/python/ui/crm/model/BrandsXpath/q8_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/q8_xpath.yml
@@ -6,7 +6,7 @@ ClientsPage:
   country_field: "//tr[@id='customAdvanceSearch']//td[8]//input[@class='form-control multiselect-search']"
 TasksPage:
   pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
-  subject_input: "//tr[@class='tableFilters']//td[15]//input"
+  subject_input: "//*[@id='host-element']/input"
   account_name_input: "//*[@id='host-element']/input"
 FinancialTransactionsPage:
   client_name_element:  "(//*[@id='listBody']//tr/td[4])[%s]"
