--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -8,6 +8,8 @@ ClientsPage:
   client_currency: "//td[@class='dvtCellInfo'][contains(text(),'EUR')]"
   client_phone: "//div[@title='Click to Call'][@class='actions_btn']"
   client_country: "//span[@id='dtlview_Country']"
+  client_citizenship: "//span[@id='dtlview_Citizenship']"
+  citizenship: "//select[@id='citizenship']/option[contains(text(), '%s')]"
 TasksPage:
   pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
   subject_input: "//tr[@class='tableFilters']//td[15]//input"
@@ -52,3 +54,5 @@ CAPage:
   create_account_btn: "//button[@class='forex-button-pandats'][contains(text(), 'Create Account')]"
   actual_leverage: "//accounts/div/div/perfect-scrollbar/div/div[1]/div/table/tbody/tr/td[2]"
   actual_currency: "//accounts/div/div/perfect-scrollbar/div/div[1]/div/table/tbody/tr/td[3]"
+  citizenship: "//custom-select[@name='citizenship']//span[text()='%s']"
+  edit_first_name: "//input[@name='firstName']"
