--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -5,14 +5,19 @@ tests_config:
   class: SignUpTest
   tests:
     - test_check_sign_up
-    - test_registred_client_exist_in_crm
-- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
-  class: AddNewAccountTestCA
+#    - test_registred_client_exist_in_crm
+#- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
+#  class: AddNewAccountTestCA
+#  tests:
+#    - test_add_live_account_ca
+#    - test_add_demo_account_ca
+#    - test_verify_accounts_in_crm
+#    - test_switch_between_accounts_ca
+- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
+  class: PersonalDetailsUpdateTestCA
   tests:
-    - test_add_live_account_ca
-    - test_add_demo_account_ca
-    - test_verify_accounts_in_crm
-    - test_switch_between_accounts_ca
+#    - test_update_personal_details_in_ca
+    - test_update_personal_details_in_crm
 
 
 
