--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -13,16 +13,16 @@ brands:
 #  config_file: kbcapitals.yml
 #- name: fxpmarkets
 #  config_file: fxpmarkets.yml
-- name: mlnfx
-  config_file: mlnfx.yml
+#- name: mlnfx
+#  config_file: mlnfx.yml
 #- name: brokerxp
 #  config_file: brokerxp.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
 #- name: kaya_fx
 #  config_file: kaya_fx.yml
-#- name: triomarkets
-#  config_file: triomarkets.yml
+- name: triomarkets
+  config_file: triomarkets.yml
 #- name: stoxmarket
 #  config_file: stoxmarket.yml
 #- name: itrader
