--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -15,8 +15,8 @@ brands:
 #  config_file: fxpmarkets.yml
 #- name: mlnfx
 #  config_file: mlnfx.yml
-- name: brokerxp
-  config_file: brokerxp.yml
+#- name: brokerxp
+#  config_file: brokerxp.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
 #- name: kaya_fx
@@ -25,8 +25,8 @@ brands:
 #  config_file: triomarkets.yml
 #- name: stoxmarket
 #  config_file: stoxmarket.yml
-#- name: itrader
-#  config_file: itrader.yml
+- name: itrader
+  config_file: itrader.yml
 
 
 
