OF_CA_v4: added upload test for mlnfx

--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -10,8 +10,8 @@ tests_config:
   class: AddNewLiveAccountTestCA
   tests:
     - test_add_new_live_account_ca
-#    - test_add_new_demo_account_ca
-#    - test_check_demo_in_crm
+    - test_add_new_demo_account_ca
+    - test_check_demo_in_crm
 #    - test_open_ticket_ca
 #    - test_upload_document
 
