--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -23,10 +23,10 @@ brands:
 #  config_file: kaya_fx.yml
 #- name: triomarkets
 #  config_file: triomarkets.yml
-#- name: stoxmarket
-#  config_file: stoxmarket.yml
-- name: itrader
-  config_file: itrader.yml
+- name: stoxmarket
+  config_file: stoxmarket.yml
+#- name: itrader
+#  config_file: itrader.yml
 
 
 
