--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,32 +1,32 @@
 brands:
-#- name: gmo
-#  config_file: gmo.yml
-#- name: capitalmarketsbanc
-#  config_file: capitalmarketsbanc.yml
-#- name: itrader_global
-#  config_file: itrader_global.yml
-#- name: soarfx
-#  config_file: soarfx.yml
-#- name: finmarket
-#  config_file: finmarket.yml
-#- name: kbcapitals
-#  config_file: kbcapitals.yml
-#- name: fxpmarkets
-#  config_file: fxpmarkets.yml
-#- name: mlnfx
-#  config_file: mlnfx.yml
-#- name: brokerxp
-#  config_file: brokerxp.yml
-#- name: oinvestsa
-#  config_file: oinvestsa.yml
-#- name: kaya_fx
-#  config_file: kaya_fx.yml
-#- name: triomarkets
-#  config_file: triomarkets.yml
+- name: gmo
+  config_file: gmo.yml
+- name: capitalmarketsbanc
+  config_file: capitalmarketsbanc.yml
+- name: itrader_global
+  config_file: itrader_global.yml
+- name: soarfx
+  config_file: soarfx.yml
+- name: finmarket
+  config_file: finmarket.yml
+- name: kbcapitals
+  config_file: kbcapitals.yml
+- name: fxpmarkets
+  config_file: fxpmarkets.yml
+- name: mlnfx
+  config_file: mlnfx.yml
+- name: brokerxp
+  config_file: brokerxp.yml
+- name: oinvestsa
+  config_file: oinvestsa.yml
+- name: kaya_fx
+  config_file: kaya_fx.yml
+- name: triomarkets
+  config_file: triomarkets.yml
 - name: stoxmarket
   config_file: stoxmarket.yml
-#- name: itrader
-#  config_file: itrader.yml
+- name: itrader
+  config_file: itrader.yml
 
 
 
