--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,6 +1,6 @@
 brands:
-#- name: mpcrypto
-#  config_file: mpcrypto.yml
+- name: mpcrypto
+  config_file: mpcrypto.yml
 #- name: goldenmarkets
 #  config_file: goldenmarkets.yml
 #- name: safemarkets
@@ -45,8 +45,8 @@ brands:
 #  config_file: bots.yml
 #- name: kontofx
 #  config_file: kontofx.yml
-- name: xtraderfx
-  config_file: xtraderfx.yml
+#- name: xtraderfx
+#  config_file: xtraderfx.yml
 #- name: firstindex
 #  config_file: firstindex.yml
 #- name: coinstec
