add the date to names of filters

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,6 +1,6 @@
 brands:
-- name: mpcrypto
-  config_file: mpcrypto.yml
+#- name: mpcrypto
+#  config_file: mpcrypto.yml
 - name: goldenmarkets
   config_file: goldenmarkets.yml
 #- name: safemarkets
