--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,19 +1,25 @@
 tests_config:
 
   ###General
-- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
-  class: FilterModulesTest
-  tests:
-    - test_create_filter_clients_module
-    - test_create_filter_documents_module
-    - test_create_filter_leads_module
-    - test_create_filter_help_desk
-    - test_create_filter_trading_account_module
+#- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
+#  class: FilterModulesTest
+#  tests:
+#    - test_create_filter_clients_module
+#    - test_create_filter_documents_module
+#    - test_create_filter_leads_module
+#    - test_create_filter_help_desk
+#    - test_create_filter_trading_account_module
   #Leads
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
   class: TabLeadsModuleCRM
   tests:
-    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
+#    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
+#    - sorting_lead_module
+    - test_mass_assign_leads
+#    - test_mass_edit_leads
+#    - export_full_list
+#    - export_select_records
+#    - import_leads
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
   directive: reload_configuration
   class: LeadModuleTest
