--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,6 +1,6 @@
 brands:
-- name: 2mercados
-  config_file: 2mercados.yml
+#- name: 2mercados
+#  config_file: 2mercados.yml
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
 #- name: 4xfx
@@ -23,8 +23,8 @@ brands:
 #  config_file: herdos.yml
 #- name: solocapitals
 #  config_file: solocapitals.yml
-#- name: tradospot
-#  config_file: tradospot.yml
+- name: tradospot
+  config_file: tradospot.yml
 #- name: jonesmutual
 #  config_file: jonesmutual.yml
 #- name: swiftcfd
@@ -43,6 +43,10 @@ brands:
 #  config_file: brokerz.yml
 #- name: q8
 #  config_file: q8.yml
+#- name: kontofx
+#  config_file: kontofx.yml
+#- name: ptbanc
+#  config_file: ptbanc.yml
 
 
 
