--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -15,11 +15,11 @@ tests_config:
   tests:
 #    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
 #    - sorting_lead_module
-    - test_mass_assign_leads
+#    - test_mass_assign_leads
 #    - test_mass_edit_leads
 #    - export_full_list
 #    - export_select_records
-#    - import_leads
+    - import_leads
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
   directive: reload_configuration
   class: LeadModuleTest
