--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -2,8 +2,10 @@ brands:
 
 #- name: firstindex
 #  config_file: firstindex.yml
-- name: mpcrypto
-  config_file: mpcrypto.yml
+#- name: mpcrypto
+#  config_file: mpcrypto.yml
+- name: kontofx
+  config_file: kontofx.yml
 
 
 
