--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -17,8 +17,8 @@ brands:
 #  config_file: itrader_global.yml
 #- name: finmarket
 #  config_file: finmarket.yml
-- name: mlnfx
-  config_file: mlnfx.yml
+#- name: mlnfx
+#  config_file: mlnfx.yml
 #- name: fxpmarkets
 #  config_file: fxpmarkets.yml
 #- name: soarfx
@@ -27,8 +27,8 @@ brands:
 #  config_file: kbcapitals.yml
 #- name: oinvestsa
 #  config_file: oinvestsa.yml
-#- name: brokerxp
-#  config_file: brokerxp.yml
+- name: brokerxp
+  config_file: brokerxp.yml
 #- name: fm-fx
 #  config_file: fm-fx.yml
 #- name: capitalmarketsbanc
