--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -9,8 +9,8 @@ brands:
 #  config_file: coinstec.yml
 #- name: mpcrypto
 #  config_file: mpcrypto.yml
-#- name: b-finance
-#  config_file: b-finance.yml
+- name: b-finance
+  config_file: b-finance.yml
 #- name: aztrades
 #  config_file: aztrades.yml
 #- name: brokerz
@@ -31,8 +31,8 @@ brands:
 #  config_file: swiftcfd.yml
 #- name: newrichmarkets
 #  config_file: newrichmarkets.yml
-- name: q8
-  config_file: q8.yml
+#- name: q8
+#  config_file: q8.yml
 #- name: firstindex
 #  config_file: firstindex.yml
 #- name: b-finance
