--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -11,24 +11,24 @@ brands:
 #  config_file: gmo.yml
 #- name: triomarkets
 #  config_file: triomarkets.yml
-- name: rimarkets
-  config_file: rimarkets.yml
-- name: itrader_global
-  config_file: itrader_global.yml
-- name: finmarket
-  config_file: finmarket.yml
-- name: mlnfx
-  config_file: mlnfx.yml
-- name: fxpmarkets
-  config_file: fxpmarkets.yml
-- name: soarfx
-  config_file: soarfx.yml
-- name: kbcapitals
-  config_file: kbcapitals.yml
-- name: oinvestsa
-  config_file: oinvestsa.yml
-- name: brokerxp
-  config_file: brokerxp.yml
+#- name: rimarkets
+#  config_file: rimarkets.yml
+#- name: itrader_global
+#  config_file: itrader_global.yml
+#- name: finmarket
+#  config_file: finmarket.yml
+#- name: mlnfx
+#  config_file: mlnfx.yml
+#- name: fxpmarkets
+#  config_file: fxpmarkets.yml
+#- name: soarfx
+#  config_file: soarfx.yml
+#- name: kbcapitals
+#  config_file: kbcapitals.yml
+#- name: oinvestsa
+#  config_file: oinvestsa.yml
+#- name: brokerxp
+#  config_file: brokerxp.yml
 - name: fm-fx
   config_file: fm-fx.yml
 - name: capitalmarketsbanc
