--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,8 +1,8 @@
 brands:
 #- name: mpcrypto
 #  config_file: mpcrypto.yml
-- name: goldenmarkets
-  config_file: goldenmarkets.yml
+#- name: goldenmarkets
+#  config_file: goldenmarkets.yml
 #- name: safemarkets
 #  config_file: safemarkets.yml
 #- name: b-traderfx
@@ -27,8 +27,8 @@ brands:
 #  config_file: uft.yml
 #- name: brokerz
 #  config_file: brokerz.yml
-#- name: 4xfx
-#  config_file: 4xfx.yml
+- name: 4xfx
+  config_file: 4xfx.yml
 #- name: herdos
 #  config_file: herdos.yml
 #- name: ptbanc
