--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -9,8 +9,8 @@ brands:
 #  config_file: coinstec.yml
 #- name: mpcrypto
 #  config_file: mpcrypto.yml
-- name: b-finance
-  config_file: b-finance.yml
+#- name: b-finance
+#  config_file: b-finance.yml
 #- name: aztrades
 #  config_file: aztrades.yml
 #- name: brokerz
@@ -45,8 +45,8 @@ brands:
 #  config_file: q8.yml
 #- name: kontofx
 #  config_file: kontofx.yml
-#- name: ptbanc
-#  config_file: ptbanc.yml
+- name: ptbanc
+  config_file: ptbanc.yml
 
 
 
