--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -31,3 +31,11 @@ AffiliatePage:
   blocked_country_drop_down: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]"
   input_country: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
   trash_button: "//span[@class = 'glyphicon glyphicon-trash cursor-pointer ng-star-inserted']"
+LeadsModule:
+  check_first_line_email_1: "//tbody[@id = 'listBody']/tr[1]/td[9]"
+  check_first_line_email_2: "//tbody[@id = 'listBody']/tr[2]/td[9]"
+  check_first_line_exist: "//tbody[@id = 'listBody']/tr[1]/td[11]"
+  check_first_line_leads_no1: "//tbody[@id = 'listBody']/tr[1]/td[3]"
+  check_first_line_leads_no2: "//tbody[@id = 'listBody']/tr[2]/td[3]"
+  edit_status: "//*[@id='leadstatus_mass_edit_check']/div[1]/div"
+  mass_edit_leads: "//*[@id='list_action_buttons']/input[2]"
