--- a/src/main/python/ui/crm/model/BrandsXpath/royal_cfds_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/royal_cfds_xpath.yml
@@ -24,5 +24,9 @@ AffiliatePage:
   input_methods: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[5]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
   blocked_country_drop_down: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]"
   input_country: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
+LeadsModule:
+  check_first_line_email_1: "//tbody[@id = 'listBody']/tr[1]/td[8]"
+  check_first_line_email_2: "//tbody[@id = 'listBody']/tr[2]/td[8]"
+  check_first_line_exist: "//tbody[@id = 'listBody']/tr[1]/td[10]"
 
 
