--- a/src/main/python/ui/crm/model/BrandsXpath/swiftcfd_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/swiftcfd_xpath.yml
@@ -7,3 +7,11 @@ FinancialTransactionsPage:
   modified_time_element: "(//*[@id='listBody']//tr/td[12])[%s]"
 AffiliatePage:
   countrys: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]/filter-multi-select/div/div[2]/span[contains(text(),'%s')]"
+LeadsModule:
+  check_first_line_email_1: "//tbody[@id = 'listBody']/tr[1]/td[8]"
+  check_first_line_email_2: "//tbody[@id = 'listBody']/tr[2]/td[8]"
+  check_first_line_exist: "//tbody[@id = 'listBody']/tr[1]/td[10]"
+  check_first_line_leads_no1: "//tbody[@id = 'listBody']/tr[1]/td[2]"
+  check_first_line_leads_no2: "//tbody[@id = 'listBody']/tr[2]/td[2]"
+  edit_status: "//*[@id='leadstatus_mass_edit_check']/div[1]/div"
+  mass_edit_leads: "//*[@id='list_action_buttons']/input[2]"
