--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -13,8 +13,8 @@ brands:
 #  config_file: triomarkets.yml
 #- name: rimarkets
 #  config_file: rimarkets.yml
-- name: itrader_global
-  config_file: itrader_global.yml
+#- name: itrader_global
+#  config_file: itrader_global.yml
 #- name: finmarket
 #  config_file: finmarket.yml
 #- name: mlnfx
@@ -25,8 +25,8 @@ brands:
 #  config_file: soarfx.yml
 #- name: kbcapitals
 #  config_file: kbcapitals.yml
-#- name: oinvestsa
-#  config_file: oinvestsa.yml
+- name: oinvestsa
+  config_file: oinvestsa.yml
 #- name: brokerxp
 #  config_file: brokerxp.yml
 #- name: fm-fx
