--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,8 +1,8 @@
 brands:
-#- name: kayafx
-#  config_file: kaya_fx.yml
-#- name: itrader
-#  config_file: itrader.yml
+- name: kayafx
+  config_file: kaya_fx.yml
+- name: itrader
+  config_file: itrader.yml
 #- name: stoxmarket
 #  config_file: stoxmarket.yml
 #- name: otcapital
@@ -25,11 +25,11 @@ brands:
 #  config_file: soarfx.yml
 #- name: kbcapitals
 #  config_file: kbcapitals.yml
-- name: oinvestsa
-  config_file: oinvestsa.yml
+#- name: oinvestsa
+#  config_file: oinvestsa.yml
 #- name: brokerxp
 #  config_file: brokerxp.yml
 #- name: fm-fx
 #  config_file: fm-fx.yml
-#- name: capitalmarketsbanc
-#  config_file: capitalmarketsbanc.yml
+- name: capitalmarketsbanc
+  config_file: capitalmarketsbanc.yml
