--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -33,8 +33,8 @@ brands:
 #  config_file: herdos.yml
 #- name: ptbanc
 #  config_file: ptbanc.yml
-#- name: q8
-#  config_file: q8.yml
+- name: q8
+  config_file: q8.yml
 #- name: 2mercados
 #  config_file: 2mercados.yml
 #- name: axa_markets
@@ -51,8 +51,8 @@ brands:
 #  config_file: firstindex.yml
 #- name: coinstec
 #  config_file: coinstec.yml
-- name: tradospot
-  config_file: tradospot.yml
+#- name: tradospot
+#  config_file: tradospot.yml
 #- name: 24btcmarket
 #  config_file: 24btcmarket.yml
 #- name: marketsplus
