--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,9 +1,11 @@
 brands:
 
-- name: aztrades
-  config_file: aztrades.yml
-- name: q8
-  config_file: q8.yml
+#- name: aztrades
+#  config_file: aztrades.yml
+#- name: q8
+#  config_file: q8.yml
+- name: forexbestmarket
+  config_file: forexbestmarket.yml
 
 
 
