--- a/src/main/python/ui/crm/model/BrandsXpath/ptbanc_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/ptbanc_xpath.yml
@@ -17,9 +17,9 @@ FinancialTransactionsPage:
 ClientProfilePage:
   deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
 CALoginPage:
-  city: "(//input[@name = 'city'])[2]"
-  zip_code: "(//input[@name = 'postCode'])[2]"
-  address: "(//input[@name = 'address'])[2]"
-  next_btn: "(//button[contains (text(), 'Next')])[2]"
+  city: "//input[@name = 'city']"
+  zip_code: "//input[@name = 'postCode']"
+  address: "//input[@name = 'address']"
+  next_btn: "//button[contains (text(), 'Next')]"
 
 
