--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -20,12 +20,12 @@ tests_config:
 #    - test_personal_details_were_updated_in_crm
 #    - test_update_personal_details_in_crm
 #    - test_personal_details_were_updated_in_ca
-- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
-  class: CreateSupportTicketTestCa
-  tests:
-    - test_create_ticket
-    - test_check_and_update_ticket_in_crm
-    - test_check_updated_ticket_in_ca
+#- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
+#  class: CreateSupportTicketTestCa
+#  tests:
+#    - test_create_ticket
+#    - test_check_and_update_ticket_in_crm
+#    - test_check_updated_ticket_in_ca
 #- module: src.test.python.ui.automation.implementation.ca.Test_Upload_Documents
 #  class: UploadDocumentTestCa
 #  tests:
